--- a/css/style.css
+++ b/css/style.css
@@ -310,3 +310,52 @@ nav {
     padding-right: 0.15rem;
     cursor: pointer;
 }
+
+footer {
+    display: flex;
+    color: rgb(128, 128, 128);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 0.7rem;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
+footer a {
+    color: rgb(51, 102, 178);
+    text-decoration: none;
+    font-size: 0.5rem;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+footer p {
+    margin-bottom: 0.2rem;
+    margin-top: 0;
+    padding-top: 0.2rem;
+    padding-bottom: 0.4rem;
+    border-bottom: solid;
+    border-width: 0.07rem;
+    ;
+}
+
+footer div {
+    display: flex;
+    margin-left: 0.1rem;
+    margin-right: 0.1rem;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 0.2rem;
+    padding: 0.2rem;
+    padding-top: 0;
+}
+
+footer #about,
+footer #help,
+footer #apps {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    gap: 0.09rem;
+}
