--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,10 @@ nav {
 
 .navbar {
     border-bottom-style: solid;
-    border-width: 1px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    font-size: 6px;
+    border-width: 0.1rem;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+    font-size: 0.8rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: black;
     background-color: rgb(240, 240, 240);
@@ -49,8 +49,8 @@ nav {
 }
 
 #my-subreddits {
-    margin-left: 3px;
-    margin-right: 5px;
+    margin-left: 0.25rem;
+    margin-right: 0.4rem;
 }
 
 .my-subreddits:hover {
@@ -61,39 +61,40 @@ nav {
     font-weight: bold;
     float: right;
     border-bottom-style: solid;
-    border-width: 1px;
-    padding: 2px;
-    font-size: 6px;
+    border-width: 0.1rem;
+    padding: 0.25rem;
+    font-size: 0.8rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: black;
     background-color: rgb(240, 240, 240);
+    text-decoration: none;
     white-space: nowrap;
 }
 
 .reddit-logo-div {
     background-color: rgb(206, 227, 248);
-    height: 28.5px;
+    height: 2.81rem;
     border-bottom-style: solid;
-    border-width: 1px;
+    border-width: 0.05rem;
     border-color: rgb(95, 153, 207);
 }
 
 .reddit-logo {
-    width: 70px;
-    margin-top: 1.9px;
-    margin-left: 2px;
-    margin-right: 6px;
+    width: 7rem;
+    margin-top: 0.15rem;
+    margin-left: 0.2rem;
+    margin-right: 0.4rem;
 }
 
 .reddit-logo-options {
     color: rgb(51, 102, 153);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 8px;
+    font-size: 0.7rem;
     font-weight: bold;
     text-decoration: none;
     background-color: rgb(239, 247, 255);
-    padding-left: 4px;
-    padding-right: 4px;
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
 }
 
 #logo-options {
@@ -102,10 +103,7 @@ nav {
     border-left-style: solid;
     border-color: rgb(95, 153, 207);
     color: rgb(255, 69, 0);
-    border-width: 1px;
-    padding-left: 3px;
-    padding-right: 3px;
-
+    border-width: 0.05rem;
 }
 
 .reddit-logo-options:active {
@@ -114,35 +112,32 @@ nav {
     border-left: solid;
     border-top: solid;
     border-right: solid;
-    border-width: 1px;
-    padding-left: 3px;
-    padding-right: 3px;
+    border-width: 0.05rem;
+    padding-left: 0.24rem;
+    padding-right: 0.24rem;
+    /* Make button go down when active */
 }
 
 .sign-up-div {
     float: right;
-    margin-top: 16.5px;
-    padding-left: 3px;
-    padding-right: 1px;
-    padding-top: 2px;
+    margin-top: 1.59rem;
+    padding-left: 0.2rem;
+    padding-right: 0.1rem;
+    padding-top: 0.15rem;
     background-color: rgb(239, 247, 255);
-    height: 10px;
-    width: 130px;
+    height: 1.1rem;
+    width: 17.4rem;
     color: gray;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 6px;
-    border-top-left-radius: 5px;
-}
-
-.join-text {
-    margin: 0;
+    font-size: 0.8rem;
+    border-top-left-radius: 0.5rem;
 }
 
 .log-in-button,
 .sign-up-button {
     color: rgb(51, 102, 153);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 6px;
+    font-size: 0.8rem;
 }
 
 .log-in-button:hover,
@@ -151,14 +146,14 @@ nav {
 }
 
 #popular-search {
-    margin-top: 4px;
-    margin-left: 5px;
-    margin-right: 5px;
-    padding-bottom: 2px;
+    margin-top: 0.1rem;
+    margin-left: 0.35rem;
+    margin-right: 0.6rem;
+    padding-bottom: 0.2rem;
     border-bottom-style: dotted;
-    border-width: 1px;
+    border-width: 0.1px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 8px;
+    font-size: 0.8rem;
     display: block;
 }
 
@@ -171,24 +166,29 @@ nav {
     display: flex;
     flex-direction: column;
     float: right;
-    gap: 8px;
+    gap: 0.5rem;
+    margin-top: 0.15rem;
 }
 
 #post-container input {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 11rem;
-    height: 1rem;
+    width: 14.4rem;
+    height: 1.4rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.7rem;
     padding-left: 0.3rem;
     border-style: solid;
-    border-width: 1px;
+    border-width: 0.05rem;
+}
+
+#post-container input:focus {
+    outline: none;
 }
 
 #post-container button {
     border-style: solid;
-    border-width: 1px;
-    width: 11.55rem;
+    border-width: 0.05rem;
+    width: 15rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.7rem;
     color: rgb(51, 102, 153);
@@ -196,7 +196,7 @@ nav {
     border-color: rgb(196, 219, 241);
     padding-left: 0.3rem;
     padding-right: 0.3rem;
-    height: 1.3rem;
+    height: 1.5rem;
     border-top-right-radius: 0.6rem;
     border-bottom-right-radius: 0.6rem;
     cursor: pointer;
