--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ nav {
     border-width: 0.1rem;
     padding-top: 0.2rem;
     padding-bottom: 0.2rem;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: black;
     background-color: rgb(240, 240, 240);
@@ -57,13 +57,13 @@ nav {
     text-decoration: none;
 }
 
-#more {
+#more-button {
     font-weight: bold;
     float: right;
     border-bottom-style: solid;
     border-width: 0.1rem;
-    padding: 0.25rem;
-    font-size: 0.8rem;
+    padding: 0.23rem;
+    font-size: 0.6rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: black;
     background-color: rgb(240, 240, 240);
@@ -86,7 +86,7 @@ nav {
     margin-right: 0.4rem;
 }
 
-.reddit-logo-options {
+.reddit-logo-div a {
     color: rgb(51, 102, 153);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.7rem;
@@ -106,7 +106,7 @@ nav {
     border-width: 0.05rem;
 }
 
-.reddit-logo-options:active {
+.reddit-logo-div a:active {
     color: rgb(255, 69, 0);
     border-color: rgb(95, 153, 207) !important;
     border-left: solid;
@@ -115,12 +115,13 @@ nav {
     border-width: 0.05rem;
     padding-left: 0.24rem;
     padding-right: 0.24rem;
+    margin-bottom: 1rem;
     /* Make button go down when active */
 }
 
 .sign-up-div {
     float: right;
-    margin-top: 1.59rem;
+    margin-top: 1.57rem;
     padding-left: 0.2rem;
     padding-right: 0.1rem;
     padding-top: 0.15rem;
@@ -173,8 +174,8 @@ nav {
 
 #post-container input {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 14.4rem;
-    height: 1.4rem;
+    width: 16.35rem;
+    height: 1.6rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.7rem;
     padding-left: 0.3rem;
@@ -189,11 +190,11 @@ nav {
 #post-container button {
     border-style: solid;
     border-width: 0.05rem;
-    width: 15rem;
-    height: 1.7rem;
+    width: 17rem;
+    height: 2rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.8rem;
-    color: rgb(51, 102, 153);
+    color: rgb(81, 120, 158);
     background-color: rgb(235, 243, 252);
     border-color: rgb(196, 219, 241);
     padding-left: 0.3rem;
@@ -215,8 +216,8 @@ nav {
 .post-number {
     margin-left: 0.8rem;
     font-size: 1rem;
-    color: gray;
-    font-family: Arial;
+    color: rgb(128, 128, 128);
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     min-width: 1.1rem;
 }
@@ -227,24 +228,55 @@ nav {
     align-items: center;
     padding-left: 0.7rem;
     padding-right: 0.7rem;
-    min-width: 1rem;
+    gap: 0.1rem;
+    min-width: 2rem;
 }
 
-.rate-up:hover,
-.rate-down:hover {
+#rate-up {
+    width: 14px;
+    height: 15px;
+    background-image: url(../images/sprite-reddit.png);
+    background-position: -21px -1676px;
+    background-repeat: no-repeat;
+    display: inline-block;
+}
+
+#rate-down {
+    width: 14px;
+    height: 15px;
+    background-image: url(../images/sprite-reddit.png);
+    background-position: -108px -1654px;
+    background-repeat: no-repeat;
+    display: inline-block;
+}
+
+#rate-up:active {
+    background-position: -42px -1676px;
+}
+
+#rate-down:active {
+    background-position: 0px -1676px;
+}
+
+#rate-up:hover,
+#rate-down:hover {
     cursor: pointer;
 }
 
-.rate-up,
-.rate-down,
-.rating {
-    margin: -0.1rem;
+#rating {
     font-size: 0.9rem;
-    color: gray;
+    color: rgb(182, 182, 182);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
 }
 
-.post-image {
+#rate-up,
+#rate-down,
+#rating {
+    margin: -0.1rem;
+}
+
+#post-image {
     width: 2.8rem;
     margin-right: 0.6rem;
 }
@@ -262,6 +294,11 @@ nav {
     color: gray;
     font-family: Arial;
     font-size: 0.6rem;
+}
+
+/* remove classes for post-details and make id and remove classes inside the div */
+.post-details a {
+    text-decoration: none;
 }
 
 .post-subdetails {
