--- a/css/create-post.css
+++ b/css/create-post.css
@@ -1,20 +1,19 @@
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-p {
     margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #header {
     font-weight: bold;
-
+    margin: 0.5rem 0 0 0.5rem;
 }
 
 #post-window {
     display: flex;
     flex-direction: column;
     width: 36rem;
+    margin-left: 0.5rem;
 }
 
 #post-info {
