--- a/css/style.css
+++ b/css/style.css
@@ -4,57 +4,7 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-nav {
-    display: flex;
-    align-items: center;
-    border-bottom-style: solid;
-    border-width: 0.1rem;
-    padding-top: 0.2rem;
-    padding-bottom: 0.2rem;
-    background-color: rgb(240, 240, 240);
-    width: 100%;
-    gap: 0.15rem;
-    font-size: 0.7rem;
-}
-
-nav p {
-    display: inline;
-    margin: 0;
-}
-
-nav a {
-    color: black;
-    text-decoration: none;
-}
-
-nav a:hover {
-    text-decoration: underline;
-}
-
-#popular {
-    color: rgb(255, 69, 0);
-    font-weight: bold;
-}
-
-#top-subreddits {
-    display: flex;
-    gap: 0.15rem;
-}
-
-#my-subreddits {
-    margin-left: 0.25rem;
-    margin-right: 0.4rem;
-}
-
-#more-button {
-    font-weight: bold;
-    margin-left: auto;
-    margin-right: 0.2rem;
-    overflow-x: hidden;
-    white-space: nowrap;
-}
-
-.reddit-logo-div {
+#reddit-logo-div {
     background-color: rgb(206, 227, 248);
     height: 2.81rem;
     border-bottom-style: solid;
@@ -62,14 +12,14 @@ nav a:hover {
     border-color: rgb(95, 153, 207);
 }
 
-.reddit-logo {
+#reddit-logo-div img {
     width: 7rem;
     margin-top: 0.15rem;
     margin-left: 0.2rem;
     margin-right: 0.4rem;
 }
 
-.reddit-logo-div a {
+#reddit-logo-div a {
     color: rgb(51, 102, 153);
     font-size: 0.7rem;
     font-weight: bold;
@@ -80,20 +30,20 @@ nav a:hover {
 }
 
 #logo-options {
+    color: rgb(255, 69, 0) !important;
+    border-color: rgb(95, 153, 207);
     border-top-style: solid;
     border-right-style: solid;
     border-left-style: solid;
-    border-color: rgb(95, 153, 207);
-    color: rgb(255, 69, 0);
     border-width: 0.05rem;
 }
 
-.reddit-logo-div a:active {
+#reddit-logo-div a:active {
     color: rgb(255, 69, 0);
-    border-color: rgb(95, 153, 207) !important;
-    border-left: solid;
-    border-top: solid;
-    border-right: solid;
+    border-color: rgb(95, 153, 207);
+    border-left-style: solid;
+    border-top-style: solid;
+    border-right-style: solid;
     border-width: 0.05rem;
     padding-left: 0.24rem;
     padding-right: 0.24rem;
@@ -101,7 +51,7 @@ nav a:hover {
     /* Make button go down when active */
 }
 
-.sign-up-div {
+#sign-up-div {
     float: right;
     margin-top: 1.57rem;
     padding-left: 0.2rem;
@@ -115,14 +65,15 @@ nav a:hover {
     border-top-left-radius: 0.5rem;
 }
 
-.log-in-button,
-.sign-up-button {
-    color: rgb(51, 102, 153);
-    font-size: 0.8rem;
+#sign-up-div p {
+    margin: 0;
 }
 
-.log-in-button:hover,
-.sign-up-button:hover {
+#sign-up-div span {
+    color: rgb(51, 102, 153);
+}
+
+#sign-up-div span:hover {
     cursor: pointer;
 }
 
@@ -135,7 +86,12 @@ nav a:hover {
     border-bottom-style: dotted;
     border-width: 0.1px;
     font-size: 0.8rem;
-    display: block;
+    display: flex;
+    height: 1.3rem;
+}
+
+#popular-search p {
+    margin-top: 0.1rem;
 }
 
 #popular-search span {
@@ -146,7 +102,7 @@ nav a:hover {
 #post-container {
     display: flex;
     flex-direction: column;
-    float: right;
+    margin-left: auto;
     gap: 0.5rem;
     margin-top: 0.15rem;
 }
