--- a/css/post-page.css
+++ b/css/post-page.css
@@ -2,4 +2,200 @@ body {
     margin: 0;
     padding: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(242, 242, 242);
+}
+
+#post-container {
+    background-color: white;
+    box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.5);
+    border-radius: 0.2rem;
+    width: 50rem;
+    height: auto;
+    padding: 1rem 0;
+    margin-top: 0.5rem;
+    margin-left: 0.5rem;
+    display: flex;
+}
+
+#rating-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 0.7rem;
+    padding-right: 0.7rem;
+    margin-left: 0.8rem;
+    gap: 0.14rem;
+    margin: 0.2rem 0;
+    min-width: 2.2rem;
+}
+
+#rate-up {
+    width: 14px;
+    height: 15px;
+    background-image: url(../images/sprite-reddit.png);
+    background-position: -21px -1676px;
+}
+
+#rate-down {
+    width: 14px;
+    height: 15px;
+    background-image: url(../images/sprite-reddit.png);
+    background-position: -108px -1654px;
+}
+
+#rate-up:active {
+    background-position: -42px -1676px;
+}
+
+#rate-down:active {
+    background-position: 0px -1676px;
+}
+
+#rate-up:hover,
+#rate-down:hover {
+    cursor: pointer;
+}
+
+#rating {
+    font-size: 1rem;
+    color: rgb(182, 182, 182);
+    font-weight: bold;
+}
+
+#rate-up,
+#rate-down,
+#rating {
+    margin: -0.1rem;
+}
+
+#post-info {
+    display: flex;
+    flex-direction: column;
+}
+
+#post-title {
+    font-size: 1.2rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    color: blue;
+}
+
+#post-details {
+    margin-top: 0.2rem;
+    font-size: 0.6rem;
+    color: gray;
+}
+
+#post-details span {
+    color: rgb(52, 108, 178);
+}
+
+#post-content {
+    margin: 0;
+    padding: 0.7rem;
+    font-size: 0.8rem;
+    border: solid 0.1rem rgb(51, 102, 153);
+    margin-right: 0.5rem;
+}
+
+#create-comment-container {
+    margin-left: 0.5rem;
+    margin-top: 1rem;
+    padding-left: 2rem;
+    padding-bottom: 0.1rem;
+    box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.5);
+    background-color: rgb(248, 248, 248);
+    border-radius: 0.2rem;
+    width: 48rem;
+    display: flex;
+    flex-direction: column;
+}
+
+#create-comment-container p {
+    margin-top: 0.5rem;
+}
+
+#create-comment-container textarea {
+    width: 65%;
+    height: 6rem;
+    margin-bottom: 0.5rem;
+    border-style: solid 0.1rem rgb(128, 128, 128);
+}
+
+#submit-comment {
+    margin-bottom: 0.5rem;
+}
+
+#submit-comment button {
+    height: 1.5rem;
+    width: 3rem;
+    background-color: rgb(239, 239, 239);
+    border-width: 0.1rem;
+    border-radius: 0.2rem;
+}
+
+#submit-comment button:hover {
+    cursor: pointer;
+    background-color: rgb(229, 229, 229);
+}
+
+#submit-comment select {
+    height: 1.5rem;
+    width: auto;
+    background-color: rgb(239, 239, 239);
+    border-width: 0.1rem;
+    border-radius: 0.2rem;
+    border-color: black;
+}
+
+#comments-container {
+    margin-left: 0.5rem;
+    margin-top: 1rem;
+    padding-left: 0.5rem;
+    padding-top: 0.5rem;
+    padding-right: 0.5rem;
+    height: auto;
+    width: 49rem;
+    box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.5);
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+}
+
+#comment-rate-up {
+    width: 14px;
+    height: 15px;
+    background-image: url(../images/sprite-reddit.png);
+    background-position: -21px -1676px;
+}
+
+#comment-rate-down {
+    width: 14px;
+    height: 15px;
+    background-image: url(../images/sprite-reddit.png);
+    background-position: -108px -1654px;
+}
+
+#comment-rate-up,
+#comment-rate-down {
+    margin: 0.1rem;
+}
+
+
+#comment-details {
+    margin-top: 0;
+    margin-left: 0.5rem;
+    font-size: 0.6rem;
+    color: gray;
+}
+
+#comment-details span {
+    color: rgb(52, 108, 178);
+    font-weight: bold;
+}
+
+#post-comment {
+    margin-top: 0.5rem;
+    padding-left: 0.5rem;
+    font-size: 0.8rem;
 }
