--- a/css/footer.css
+++ b/css/footer.css
@@ -11,6 +11,7 @@ footer {
     border-style: solid;
     border-width: 1px;
     border-radius: 0.2rem;
+    background-color: white;
 }
 
 footer a {
